# Sylo

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: demo.py  e2e_test_suite.py  real_world_test.py  test_crewai_integration.py  test_openai_agents_integration.py
luro/: __init__.py  models.py
luro/core/: approval.py  checkpoint.py  context.py  trust.py
luro/storage/: base.py  cloud_store.py  local_store.py  redis_store.py
sylo/: __init__.py  cli.py  config.py  exceptions.py  models.py
sylo/core/: approval.py  audit.py  checkpoint.py  context.py  costs.py  pipeline.py  trust.py
sylo/integrations/: __init__.py  crewai.py  langgraph.py  openai_agents.py
sylo/storage/: __init__.py  base.py  cloud_store.py  local_store.py  redis_store.py
tests/: conftest.py  test_approval.py  test_audit_engine.py  test_checkpoint.py  test_cli.py  test_config.py  test_error_handling.py  test_langgraph.py  test_local_store.py  test_models.py  test_pipeline.py  test_readme_snippets.py  test_redis_store.py  test_trust.py
