[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sylo-sdk"
version = "0.1.0"
description = "Production operating layer for AI agent pipelines — checkpointing, permission enforcement, human approval gates, and audit logging."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sylo", email = "team@sylo.dev" },
]
keywords = ["ai", "agents", "llm", "checkpointing", "audit", "production"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.25",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "fakeredis>=2.21",
]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
]

[project.scripts]
sylo = "sylo.cli:main"

[project.urls]
Homepage = "https://sylo.dev"
Documentation = "https://docs.sylo.dev"
Repository = "https://github.com/saketjndl/Sylo"

[tool.hatch.build.targets.wheel]
packages = ["sylo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
